# Mlops-group-60

./: .gitignore  404.html  README.md  data.dvc  index.html  mkdocs.yml  objects.inv  profile.txt  pyproject.toml  requirements.txt  requirements_api.txt  requirements_dev.txt  requirements_tests.txt  tasks.py
.dvc/: config
.github/workflows/: deploy_docs.yaml  tests.yaml
Mlops-group-60/: README.md  requirements.txt  tasks.py
Mlops-group-60/dockerfiles/: train.dockerfile
Mlops-group-60/docs/: mkdocs.yaml
Mlops-group-60/src/chest_xray_diagnosis/: data.py  visualize.py
api/: index.html
configs/: cloudbuild.api.yaml  cloudbuild.train.yaml  cloudbuild.yaml  vertexai_config.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: api.md  index.md  modeltraining.md
docs/source/: index.md
experiments/: coverage.txt
models/: Pretrained.pt
modeltraining/: index.html
reports/: README.md  report.html
search/: search_index.json
src/chest_xray_diagnosis/: api.py  data.py  evaluate.py  frontend.py  model.py  train.py  train_pretrained.py  visualize.py
src/chest_xray_diagnosis/config/: sweep.yaml
tests/: test_api.py  test_data.py  test_model.py
tests/performancetests/: locustfile.py
