[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chest_xray_diagnosis"
version = "0.0.1"
description = "This project leverages deep learning to analyze pediatric chest X-ray images for the detection of pneumonia, categorizing cases into normal, bacterial, or viral infections."
authors = [
  { name = "Mlops-group-60", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*",
      "config.py",
      "config-3.py",
      "_remote_module_non_scriptable.py"
      ]
